examples/test/testpolicy19627.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy19627
  namespace: namespace426
spec:
  podSelector:
    matchLabels:
      key1: value29
      key9: value8
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key5: value27
      podSelector:
        matchLabels:
          key38: value42
          key41: value32
          key0: value49
